left align issue fix

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -959,7 +959,7 @@ button {
 
 .inner_service_section {
   width: 100%;
-  padding-top: 130px;
+  padding-top: 100px;
   padding-bottom: 50px;
   border-bottom: #d3d8e3 solid 1px;
   margin-bottom: 40px;
